2000-11-14  Mark Mitchell  <mark@codesourcery.com>

	* class.c (build_vtbl_initializer): Fix typo in comment.
	* typeck.c (expr_sizeof): Don't crash on errors.

2000-11-14  Jim Wilson  <wilson@redhat.com>

	* lang-specs.h: Add %2 after %(cc1_options).

2000-11-14  Richard Henderson  <rth@redhat.com>

	* typeck.c (c_sizeof): Be strict about casting result value
	back to c_size_type_node.
	(expr_sizeof, c_sizeof_nowarn, c_alignof): Likewise.

2000-11-13  Joseph S. Myers  <jsm28@cam.ac.uk>

	* typeck.c (build_unary_op): Use boolean_increment from
	c-common.c, moving the relevant code there.

2000-11-11  Jason Merrill  <jason@redhat.com>

	* typeck.c (mark_addressable): Don't call put_var_into_stack.

	* decl.c (maybe_commonize_var): Set DECL_UNINLINABLE for statics
	in inlines.

2000-11-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* decl.c (grokdeclarator, save_function_data): Use memcpy, not bcopy.
	* lex.c (copy_lang_decl): Likewise.

2000-11-09  Mark Mitchell  <mark@codesourcery.com>

	* dump.c (cp_dump_tree): Don't dump function bodies here.

	* Make-lang.in (CXX_C_OBJS): Add c-dump.o.
	(dump.o): Update dependency list.
	* cp-tree.h (DECL_MAYBE_TEMPLATE): Remove.
	(flag_dump_translation_unit): Likewise.
	(CP_TYPE_QUALS): Adjust definition.
	(DECL_C_BIT_FIELD): Remove.
	(SET_DECL_C_BIT_FIELD): Likewise.
	(CLEAR_DECL_C_BIT_FIELD): Likewise.
	(add_maybe_template): Likewise.
	(strip_array_types): Likewise.
	(dump_node_to_file): Likewise.
	(cp_dump_tree): New function.
	* decl.c (init_decl_processing): Set lang_dump_tree.
	* decl2.c (flag_dump_translation_unit): Remove.
	* dump.c: Move most of it to ../c-dump.c.
	(cp_dump_tree): New function.
	* pt.c (add_maybe_template): Remove.
	* typeck.c (strip_array_types): Likewise.
	
2000-11-07  Eric Christopher  <echristo@redhat.com>

	* decl.c (init_decl_processing): Change definition of
	__wchar_t to wchar_t.  Remove artificial declaration of
	wchar_t.
	* lex.c: Change instances of __wchar_t to wchar_t.
