@@ -1,3 +1,7 @@
+2000-11-15  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* typeck.c (lookup_anon_field): Cope with qv qualifiers.
+
 2000-11-14  Mark Mitchell  <mark@codesourcery.com>
 
 	* class.c (build_vtbl_initializer): Fix typo in comment.
